kubernetes/cluster/media/jellyseerr/jellyseerr.yaml
# Service: Jellyseerr
# Label: app.kubernetes.io/name: jellyseerr
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5055
  selector:
    app.kubernetes.io/name: jellyseerr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      restartPolicy: Always
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          resources:
            requests:
              memory: 50Mi
              cpu: 100m
            limits:
              memory: 500Mi
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: jellyseerr-config
              mountPath: /app/config
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config
